# bitcoin-api

./: .env.example  .env.production.example  .env.staging.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.bitcoin-core-ci  LAUNCH_PLAYBOOK.md  LICENSE  NOTICE  README.md  SECURITY.md  blog-post.md  cloudflared-config.yml.example  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  pyproject.toml  results_failures.csv  results_stats.csv  results_stats_history.csv
.agents/: product-marketing-context.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: agent-integration.md  bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml  publish.yml
azure-functions/fee_alert/: function_app.py
demo/: dashboard.html
docs/: AGENT_INTEGRATION.md  AGENT_ROLES.md  ARCHITECTURE.md  ARCHIVE_critical_fixes.md  BUSINESS_PLAN.md  COMPETITIVE_ANALYSIS.md  CUSTOMER_PROOF_CLIP_BRIEF.md  FIRST_TESTERS_OUTREACH_KIT.md  GITHUB_AGENT_INTEGRATION_TARGETS.md  LAUNCH_SUBMISSION_KIT.md  LEGAL_TRACKER.md  LIVE_DEMO_CHECKLIST.md  OPERATIONS.md  PRODUCT_STATE.md  PUBLIC_SURFACE.md  ROADMAP.md  SALES_DEMO_PLAYBOOK.md  SCOPE_OF_WORK.md  VIDEO_PRODUCTION_BRIEF.md  bitcoin-conf-example.conf  blog-cloud-sprint.md  dev-to-article.md  self-hosting.md  seo-checklist.md
docs/demo-assets/: merchant-payout-batch-march-2026.json
docs/grants/: impact-metrics.md  opensats-application.md
docs/grants/launch-posts/: awesome-mcp-submissions.md  reddit-bitcoin.md  reddit-bitcoindev.md  show-hn.md  twitter-thread.md
docs/marketing/: brand-strategy.md  devto-article.md  distribution-channels.md  launch-plan.md  show-hn.md  umbrel-submission-guide.md
docs/marketing/drafts/: hackernews-show-hn.md  reddit-bitcoin.md  reddit-bitcoindev.md  reddit-python.md  reddit-selfhosted.md  stacker-news.md
docs/superpowers/plans/: 2026-04-19-merchant-funnel-implementation.md
docs/superpowers/specs/: 2026-04-19-merchant-funnel-design.md
docs/website/: best-bitcoin-api-for-developers.html  bitcoin-api-for-ai-agents.html  bitcoin-fee-api.html  bitcoin-mempool-api.html  index.html  self-hosted-bitcoin-api.html  vs-mempool.html
examples/: README.md
examples/block-tracker/: README.md  block_tracker.py
examples/fee-monitor/: README.md  fee_monitor.py
examples/mempool-monitor/: README.md  mempool_monitor.py
examples/x402-paid-call/: README.md  paid-call.ts  paid_call.py
scripts/: analytics_digest.py  azure-setup.sh  azure-teardown.sh  backup-db.sh  count_facts.py  create_api_key.py  deploy-api.sh  diagnose.sh  doc_consistency.py  export_fee_forecast_benchmark.py  fee_alert_worker.py  install-hooks.sh  install-watchdog.sh  launch-monitor.sh  legal_audit.py  marketing_sync.py  privacy_check.py  rehearse-founder-demo.py  release.sh  render_sales_demo_video.py  security_audit.py  security_check.sh  seed_db.py  seo_metrics.py  smoke-test-api.sh  staging-check.sh  stamp_endpoint_count.py  submit_indexnow.sh  trigger_check.py  try-public-api.sh  watchdog-api.sh
sdk/: README.md  pyproject.toml
sdk/satoshi_api/: __init__.py
src/bitcoin_api/: __init__.py  auth.py  benchmark_export_cli.py  cache.py  circuit_breaker.py  config.py  db.py  dependencies.py  exceptions.py  jobs.py  main.py  metrics.py  middleware.py  models.py  notifications.py  pubsub.py  rate_limit.py  rpc_async.py  static_routes.py  stripe_client.py  usage_buffer.py  validators.py
src/bitcoin_api/indexer/: __init__.py  config.py  db.py  models.py  parser.py  reorg.py  worker.py
src/bitcoin_api/migrations/: 001_initial_schema.sql  002_add_migrations_table.sql  003_add_schema_migrations_index.sql  004_add_subscriptions.sql  005_add_client_type.sql  006_add_email_opt_out.sql  007_add_client_ip.sql  008_add_error_type.sql  009_add_registration_source.sql  010_add_signup_attribution.sql  011_add_x402_payments.sql  012_add_research_tables.sql  runner.py
src/bitcoin_api/routers/: AGENTS.md  address.py  ai.py  alerts.py  analytics.py  billing.py  blocks.py  exchanges.py  fees.py  guide.py  health_deep.py  history.py  keys.py  mcp_server.py  mempool.py  metrics.py  mining.py  network.py  observatory.py  prices.py  psbt.py  rpc_proxy.py  stats.py  status.py  stream.py  supply.py  transactions.py  websocket.py  x402_stats.py
src/bitcoin_api/services/: AGENTS.md  __init__.py  ai.py  analytics.py  (+9 more)
static/: 404.html  about.html  admin-dashboard.html  ai.html  api-docs.html  best-bitcoin-api-for-developers.html  best-time-to-send-bitcoin.html  bitcoin-api-for-ai-agents.html  bitcoin-api-for-trading-bots.html  bitcoin-fee-api.html  bitcoin-fee-estimator.html  bitcoin-mcp-setup-guide.html  bitcoin-mempool-api.html  bitcoin-transaction-fee-calculator.html  disclaimer.html  fee-observatory.html  fees.html  founder-dashboard.html  guide.html  how-to-reduce-bitcoin-transaction-fees.html  ibit.html  index.html  indexnow-key.txt  llms-full.txt  llms.txt  mcp-setup.html  pricing.html  privacy.html  robots.txt  self-hosted-bitcoin-api.html  sitemap.xml  terms.html  visualizer.html  vs-blockcypher.html  vs-mempool.html  x402.html
static/history/: address.html  block.html  history-data.json  index.html  tx.html
static/js/: site-helpers.js
tests/: conftest.py  helpers.py  locustfile.py  test_admin.py  test_ai.py  test_alerts.py  test_api.py  test_auth_unit.py  test_billing.py  test_blocks.py  test_circuit_breaker.py  test_e2e.py  test_failover.py  test_fee_benchmark_export.py  test_fees.py  test_guide.py  test_health.py  test_history.py  test_import_path.py  test_indexer_parser.py  test_indexer_reorg.py  test_indexer_routers.py  test_indexer_services.py  test_indexer_worker.py  test_jobs.py  test_keys.py  test_mcp_server.py  test_mempool.py  test_middleware_unit.py  test_mining.py  test_misc.py  test_network.py  test_notifications.py  test_observatory.py  test_price_service.py  test_psbt.py  test_rate_limit_redis.py  test_rpc_proxy.py  test_stale_cache.py  test_transactions.py  (+2 more)
umbrel/: docker-compose.yml  umbrel-app.yml
(+7 files in other folders)
