[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bitcoin-api"
version = "0.1.0"
description = "Developer-friendly Bitcoin REST API powered by your own node"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Andy Barnes" }]
keywords = ["bitcoin", "api", "rest", "node", "blockchain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "bitcoinlib-rpc>=0.1.0",
    "pydantic-settings>=2.0",
    "cachetools>=5.3",
]

[project.optional-dependencies]
dev = ["pytest", "httpx", "pytest-asyncio"]

[project.scripts]
bitcoin-api = "bitcoin_api.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/bitcoin_api"]
