[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "satoshi-api"
version = "0.1.0"
description = "Satoshi API — developer-friendly Bitcoin REST API powered by your own node"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Bortlesboat" }]
keywords = ["bitcoin", "api", "rest", "node", "blockchain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "bitcoinlib-rpc>=0.1.0",
    "pydantic-settings>=2.0",
    "cachetools>=5.3",
]

[project.urls]
Homepage = "https://bitcoinsapi.com"
Documentation = "https://bitcoinsapi.com/docs"
Repository = "https://github.com/Bortlesboat/bitcoin-api"
Issues = "https://github.com/Bortlesboat/bitcoin-api/issues"

[project.optional-dependencies]
dev = ["pytest", "httpx", "pytest-asyncio", "ruff", "pytest-cov", "locust"]

[project.scripts]
satoshi-api = "bitcoin_api.main:cli"
bitcoin-api = "bitcoin_api.main:cli"

[tool.pytest.ini_options]
markers = ["e2e: end-to-end tests against running API"]

[tool.hatch.build.targets.wheel]
packages = ["src/bitcoin_api"]
