[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "satoshi-api"
version = "0.3.4"
description = "Bitcoin fee intelligence API — know when to send and save money on every transaction. Open source, self-hostable."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Bortlesboat" }]
keywords = ["bitcoin", "api", "rest", "node", "blockchain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "bitcoinlib-rpc>=0.1.0",
    "pydantic-settings>=2.0",
    "cachetools>=5.3",
    "requests>=2.28.0",
    "prometheus-client>=0.20.0",
]

[project.urls]
Homepage = "https://bitcoinsapi.com"
Documentation = "https://bitcoinsapi.com/docs"
Repository = "https://github.com/Bortlesboat/bitcoin-api"
Issues = "https://github.com/Bortlesboat/bitcoin-api/issues"

[project.optional-dependencies]
billing = ["stripe>=7.0.0"]
email = ["resend>=2.0.0"]
redis = ["upstash-redis>=1.0.0"]
analytics = ["posthog>=3.0.0"]
all = ["stripe>=7.0.0", "resend>=2.0.0", "upstash-redis>=1.0.0", "posthog>=3.0.0"]
indexer = ["asyncpg>=0.29.0", "pyzmq>=25.0.0"]
dev = ["pytest", "httpx", "pytest-asyncio", "ruff", "pytest-cov", "locust"]

[project.scripts]
satoshi-api = "bitcoin_api.main:cli"
bitcoin-api = "bitcoin_api.main:cli"

[tool.pytest.ini_options]
markers = ["e2e: end-to-end tests against running API"]

[tool.hatch.build.targets.wheel]
packages = ["src/bitcoin_api"]
