[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "satoshi-api"
version = "0.1.0"
description = "Python SDK for the Satoshi API — Bitcoin node data for developers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Satoshi API", email = "api@bitcoinsapi.com" }]
keywords = ["bitcoin", "api", "sdk", "blockchain", "cryptocurrency"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://bitcoinsapi.com"
Documentation = "https://bitcoinsapi.com/docs"
Repository = "https://github.com/Bortlesboat/bitcoin-api"
Issues = "https://github.com/Bortlesboat/bitcoin-api/issues"
