[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "satoshi-api-sdk"
version = "0.1.0"
description = "Python SDK for Satoshi API — Bitcoin fee intelligence and blockchain data"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Bortlesboat" }]
keywords = ["bitcoin", "api", "sdk", "blockchain", "cryptocurrency", "fees"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://bitcoinsapi.com"
Documentation = "https://bitcoinsapi.com/docs"
Repository = "https://github.com/Bortlesboat/bitcoin-api"
Issues = "https://github.com/Bortlesboat/bitcoin-api/issues"

[tool.hatch.build.targets.wheel]
packages = ["satoshi_api"]
